...
    <string name="settings_description">BootyCrate settings</string>
    <string name="search_description">Search</string>
    <string name="back_description">Back</string>
    <string name="dismiss_description">Dismiss</string>
    <string name="search_query_description">Search query</string>
    <string name="change_sorting_description">Change sorting</string>
    <string name="name_ascending_description">Name ascending</string>
    <string name="name_descending_description">Name descending</string>
    <string name="amount_ascending_description">Amount ascending</string>
    <string name="amount_descending_description">Amount descending</string>
    <string name="menu_button_description">Open options menu</string>

    <string name="checkout_button_background_path_data">M108,0 h-90 A 20.5 20.5 0 0 0 0,18 A 28 28 0 0 0 28,46 h90 A 32,32 0 0 1 108,0 Z</string>

    <string name="add_button_description">Add new item</string>
    <string name="add_another_item_button_description">Add another</string>
    <string name="new_item_description">New item</string>
    <string name="delete_button_description">Delete selected items</string>
    <string name="delete_all_description">Delete all</string>
    <string name="delete_all_items_confirmation_message">
        This will delete all items in the %1$s. Are you sure?</string>
    <string name="empty_list_message">The %1$s is empty</string>
    <string name="delete_snackbar_text">%1$d item(s) deleted</string>
    <string name="undo_description">Undo</string>
    <string name="single_selection_description">1 item selected</string>
    <string name="multi_selection_description">%1$d items selected</string>

    <string name="item_collection_name">items</string>
    <string name="name_description">Item name</string>
    <string name="extra_info_description">Item extra info</string>
    <string name="color_description">Color</string>
    <string name="edit_color_description">Edit color</string>
    <string name="integer_edit_decrease_button_description">Decrease amount</string>
    <string name="integer_edit_increase_button_description">Increase amount</string>
    <string name="integer_edit_value_description">Amount</string>
    <string name="edit_button_description">Edit item</string>
    <string name="link_status_description">Linked status</string>
    <string name="collapse_button_description">Collapse item extra details</string>
    <string name="select_item_description">Select %1$s</string>
    <string name="deselect_item_description">Deselect %1$s</string>

    <string name="shopping_list_description">shopping list</string>
    <string name="add_to_shopping_list_description">Add to shopping list</string>
    <string name="shopping_list_badge_text">+%1$d</string>
    <string name="checkout_description">Checkout</string>
    <string name="checkout_confirm_description">Confirm?</string>

    <string name="inventory_description">inventory</string>
    <string name="add_to_inventory_description">Add to inventory</string>
    <string name="auto_add_to_shopping_list_checkbox_description">Auto add to shopping list</string>
    <string name="auto_add_to_shopping_list_checkbox_text">Add to list under</string>
    <string name="auto_add_to_shopping_list_trigger_edit_description">Auto-add to shopping list amount threshold</string>

    <string name="item_extra_info_description">%1$s extra info</string>
...
    <string name="collapse_item_description">Collapse %1$s</string>
    <string name="item_auto_add_to_shopping_list_checkbox_description">Auto-add %1$s to shopping list checkbox</string>
    <string name="item_auto_add_to_shopping_list_amount_decrease_description">Decrease %1$s auto-add to shopping list amount</string>
    <string name="item_auto_add_to_shopping_list_amount_increase_description">Increase %1$s auto-add to shopping list amount</string>
    <string name="item_auto_add_to_shopping_list_amount_description">%1$s auto-add to shopping list amount</string>

    <string name="share_description">Share</string>
    <string name="share_whole_list_title">Share %1$s</string>
    <string name="share_selected_items_title">Share selected %1$s items. </string>
    <string name="import_database_question_message">
        Would you like to merge the imported database with the existing one, or overwrite it?</string>
    <string name="import_database_question_merge_option">Merge</string>
    <string name="import_database_question_overwrite_option">Overwrite</string>
    <string name="import_database_overwrite_confirmation_message">
        Overwriting the existing database is irreversible. Are you sure?</string>
...
        exists in the inventory, but will not be linked to this item if it is added. If you want a linked
        item instead, select the item in the inventory and use \'%1$s\' from the options menu.</string>
    <string name="new_inventory_item_will_not_be_linked_warning">An item with the same name already
        exists on the shopping list, but will not be linked to this item if it is added. If you want a linked
        item instead, select the item on the shopping list and use \'%1$s\' from the options menu.</string>
    <string name="new_item_no_name_error">The item\'s name must not be blank</string>
    <string name="select_all_description">Select all</string>
    <string name="check_all_description">Check all</string>
    <string name="uncheck_all_description">Uncheck all</string>
    <string name="no_search_results_message">No items match the query</string>

    <string name="update_list_notification_channel_id">update_list_reminder</string>
    <string name="update_list_notification_channel_name">Update list reminder</string>
    <string name="update_list_notification_channel_description">Reminders to update your shopping list / inventory.</string>

    <string name="update_list_reminder_description">Remind me to update my shopping list or inventory</string>
...
