...
        tools:visibility="gone" />

    <com.cliffracermerchant.bootycrate.TintableCheckbox
        android:id="@+id/checkBox"
        android:layout_width="44dp"
        android:layout_height="44dp"
        app:layout_constraintEnd_toStartOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:tint="@color/colorInBetweenPrimaryAccent1"
        style="@style/ViewModelItemColorEdit" />

    <com.cliffracermerchant.bootycrate.AnimatedStrikeThroughTextFieldEdit
        android:id="@+id/nameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        app:layout_constraintEnd_toStartOf="@id/amountEdit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/extraInfoEdit"
        app:layout_goneMarginBottom="3dp"
        tools:text="Item Name"
        tools:layout_height="@dimen/text_field_edit_editable_min_height"
        style="@style/ViewModelItemNameEdit" />

    <com.cliffracermerchant.bootycrate.AnimatedStrikeThroughTextFieldEdit
...
